Create maven.yml